fix blog sidebar layout on small screens

--- a/static/styles/base.less
+++ b/static/styles/base.less
@@ -449,6 +449,7 @@ ul {
 
 a.load-document {
   text-decoration: none;
+  width: 100%;
   padding: 0;
   margin: 0;
   display: inline-flex;
